2007-12-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* reproduce-crashes.el: Renamed from reproduce-bugs.el.  Update to-do.

2007-12-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* reproduce-bugs.el:  Reorganize.  Minor cosmetic improvements.
	Update to-do list.
	(defbug):  Include status and docstring in value.
	(bug-hashtable):  Document the table format.
	(reproduce-bug):  Handle revised table format.  Remove broken
	autoload cookie.
	(describe-bug):  New function.  Pop up description of one bug.
	(list-bugs):  New function.  Pop up brief descriptions of all bugs.
	(1,2,3,4,5,6,7,8,9,10,11):  (Re)number all bugs.  Move comments to
	docstrings.

2007-12-11  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/syntax-tests.el:
	Check that substitute-in-file-name doesn't error when handed
	non-existing environment variables, passing through the specified
	string instead. Also check that existing environment variables are
	correctly substituted. Also check that double slashes in the
	middle of a path name are treated as re-starting the path. 

2007-12-10  Stephen J. Turnbull  <stephen@xemacs.org>

	* reproduce-bugs.el (reproduce-bug): Add bug 10, crash in search.

2007-12-10  Stephen J. Turnbull  <stephen@xemacs.org>

	* reproduce-bugs.el: Add some commentary.
	Number the two unnumbered bugs.
	Comment out the keybinding.

2007-12-06  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el:
	Add a Known-Bug-Expect-Error call testing and documenting that we
	don't support all of the Unicode code space in a single session.
	* automated/test-harness.el (Known-Bug-Expect-Error):
	Provide Known-Bug-Expect-Error, analagous to
	Known-Bug-Expect-Failure and Check-Error.
	* automated/test-harness.el (Silence-Message):
	Dynamically bind the function definition of #'clear-message, as
	well as that of #'append-message, to nil.

2007-12-04  Aidan Kehoe  <kehoea@parhasard.net>

	* automated/mule-tests.el (featurep):